--- a/index.html
+++ b/index.html
@@ -21,7 +21,9 @@
         <input type="file" id="poster" name="poster" accept="image/*" required>
         <button type="submit">Adicionar Filme</button>
     </form>
-    <div id="filmList"></div>
+    <div id="filmList">
+        <!-- Aqui será preenchido com a lista de filmes -->
+    </div>
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <script>
